# yew-template

./: Cargo.toml  template.html
css/: main.css
src/: main.rs  main_table.rs
src/pages/: about.rs  convert_service.rs  convertion.rs  home.rs  mod.rs  route.rs  table.rs  webgl.rs
src/pages/portal/: comments_section.rs  content_section.rs  main_page.rs  mod.rs  sidenav_section.rs  top_section.rs  video_list_section.rs  video_section.rs
