[package]
name = "yew-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"

rand = { version = "0.8.5", features = ["small_rng"] }
getrandom = { version = "0.2.10", features = ["js"] }
wasm-bindgen = "0.2.87"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlInputElement',
  'HtmlSelectElement',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
]